# unlock-protocol-bot-web

./: .gitignore  README.md  config.py  pyproject.toml
app/: __init__.py  models.py  routes.py
app/templates/: index.html  sign.html  siwe_sign.html
flask_app/: app.py
flask_app/static/: abi.json
flask_app/templates/: sign.html
