[tool.poetry]
name = "unlock-protocol-bot-backend"
version = "0.1.0"
description = ""
authors = ["kuznetsov-m"]

[tool.poetry.dependencies]
python = "^3.10"
web3 = "^5.31.0"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
pyTelegramBotAPI = "^4.7.0"
gunicorn = "^20.1.0"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
